# Chess-Assistance

./: .env.example  .gitignore  .gitmodules  CONNECTION_SUMMARY.md  Chess-Assistance.sln  README.md  SETUP_CONNECTION.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  start-all.bat  stop-all.bat
.github/: CODEOWNERS
.github/workflows/: deploy.yml  frontend-ci.yml  frontend-publish.yml  frontend.yml  iot_workflow.yaml  lichessapi-ci-cd.yml  ml-api-publish.yml  ml-ci.yml  ml-deploy.yml  ml-team-ci-cd.yml  predictionservice-ci.yml  predictionservice-publish.yml
Analysis/: ActivityDiagram_CheckOpponentTilt.md  ActivityDiagram_ViewDashboard.md  ActivityDiagram_ViewTemperature.md  Architecture.md  DomainModel.md  SSD_FillCup.md  SSD_ViewGamePerformance.md  SSD_ViewTemperature.md  UseCase_ViewTemperature.md
Implementation/: EER.md  GRDiagram.md
api-gateway/: Dockerfile  package-lock.json  package.json  server.js
api-gateway/services/: readinessService.js
documentation/: schema_columns.csv  schema_relationships.csv
documentation/analysis/: TestCases.md  TestCases.xlsx
documents/: CONNECTION_SUMMARY.md  SETUP_CONNECTION.md
documents/design/: ssml.puml
frontend/api-gateway/: package-lock.json  package.json  server.js
frontend/chessapp/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/chessapp/public/: index.html
frontend/chessapp/src/: App.css  App.js  App.jsx  App.test.js  App.test.jsx  LightSensor.jsx  PredForm.jsx  config.js  setupTests.js
frontend/chessapp/src/components/: GlassCard.jsx  (+3 more)
frontend/proto/: model.proto  sensor.proto
frontend/services/: server.js
infrastructure/: README.md  chess.Caddyfile
internet_of_things/: main.c
internet_of_things/Sensors/: .gitignore  README.md  platformio.ini
internet_of_things/Sensors/src/: credentials_privateBlank.txt  main.c
internet_of_things/mock_sensor_c/: communication.c  main.c  mock-sensor
internet_of_things/sensor_client_c/: .gitignore  CMakeLists.txt  main.c  message_builder.c  message_builder.h  rabbitmq_client.c  sensor-client  sensor_client  sensor_reader.c  sensor_reader.h
internet_of_things/sensor_client_c/linuxbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  sensor_client  test_message_builder  test_sensor_reader
internet_of_things/sensor_client_c/src/: main.c  message_builder.c  message_builder.h  rabbitmq_client.c  rabbitmq_client.h  sensor_reader.c  sensor_reader.h
internet_of_things/sensor_client_c/tests/: test_message_builder.c  test_sensor_reader.c  test_test.c
machine_learning/: README.md  run_all.py
machine_learning/api/: .dockerfile  main.py  requirements.txt  test_health.py
machine_learning/trainer/: requirements.txt  run_pipeline.py
machine_learning/trainer-clustering/: Clustering.ipynb  run_pipeline.py
machine_learning/trainer-clustering/steps/: 1_gather.py  2_features.py  3_train.py  4_evaluate.py
machine_learning/trainer/data/: features.csv  mock_data.csv
machine_learning/trainer/notebooks/: Clustering.ipynb  DataAnalysis.ipynb  explorationModel.ipynb  test.ipynb
machine_learning/trainer/steps/: 1_gather.py  2_features.py  3_train.py  4_evaluate.py
machine_learning/trainers/trainer-angriness-predictor/: .gitignore  requirements.txt  run_pipeline.py  setup_venv.ps1  setup_venv.sh
machine_learning/trainers/trainer-ap/: requirements.txt  run_pipeline.py
machine_learning/trainers/trainer-factor-imp/: run_pipeline.py
scripts/: QUICKSTART.sh  export-diagrams.ps1
scripts/databases/: docker-compose.yml  init.sql  test_triggers.sql  triggers.sql
scripts/databases/migrations/: 001_widen_lichess_game_id.sql  002_add_analysis_sync_trigger.sql  003_fix_analysis_sync_trigger_schema.sql  add_analysis_sync_trigger.sql  widen_lichess_game_id.sql
scripts/ml/: clean_data.py  clean_models.py  run_all.py
services/: Services.slnx  compose.yml  server.js
services/LichessApiService.grpc/: Dockerfile  LichessApiService.grpc.csproj  Program.cs  appsettings.json
services/LichessApiService.grpc.Tests/: LichessApiService.grpc.Tests.csproj
services/LichessApiService.grpc.Tests/Integration/: AnalysisBackfillTests.cs  GrpcServiceTests.cs  LichessStreamParsingTests.cs  OrphanedSessionCleanupTests.cs
services/LichessApiService.grpc.Tests/Mocks/: MockSensorFeedService.cs
services/LichessApiService.grpc.Tests/Unit/: LichessGameFetcherHttpTests.cs  LichessGameMappingTests.cs
services/LichessApiService.grpc/Data/: LichessDbContext.cs
services/LichessApiService.grpc/Lichess/: LichessGameFetcher.cs  LichessStreamService.cs
services/LichessApiService.grpc/Services/: AnalysisBackfillService.cs  LichessApiClient.cs  LichessApiGrpcService.cs  OrphanedSessionCleanupService.cs
services/ModelServices/: ModelServices.slnx
services/ModelServices/PredictionService.grpc/: Dockerfile  PredictionService.grpc.csproj  PredictionService.grpc.http  Program.cs
services/ModelServices/PredictionService.grpc.Tests/: GlobalExceptionInterceptorTests.cs  PredictionService.grpc.Tests.csproj  WinRateServiceTests.cs
services/grpc-service/: Dockerfile  GrpcService.csproj  Program.cs  appsettings.json  package-lock.json  package.json  server.js
services/grpc-service/Interceptors/: GlobalExceptionInterceptor.cs
services/grpc-service/Services/: IoTProxyServiceImpl.cs  WinRateServiceImpl.cs
services/iot-service/: docker-compose.yml  iot-service.slnx
services/iot-service/Grpc-Server/: Dockerfile  Grpc-Server.csproj  IIoTStateStore.cs  IoTStateStore.cs  Program.cs  SensorState.cs  appsettings.json
services/iot-service/Grpc-Server.Tests/: Grpc-Server.Tests.csproj  MatchTests.cs  RoomTests.cs  UnitTest1.cs
services/iot-service/Grpc_Test/: Grpc_Test.csproj  IoTServiceImplTests.cs  IoTServiceImplTheoryTests.cs  UnitTest1.cs
services/iot-service/MockDatabase/: MockDatabase.csproj  MockDbContext.cs  Program.cs  mock_data.sql
shared/: IoT.proto  LichessApi.proto  MAL.proto  mock.txt
(+161 files in other folders)
